changed structure of shapes and made them into objects to allow state machine control overthem

--- a/Submissions/2DTransformations/index.html
+++ b/Submissions/2DTransformations/index.html
@@ -18,9 +18,7 @@
     </section>
     <main>
         <div id="canvasContainer">
-            <canvas id="lineCanvas"></canvas>
-            <canvas id="circleCanvas"></canvas>
-            <canvas id="curveCanvas"></canvas>
+            <canvas id="canvas"></canvas>
         </div>
     </main>
     <section class="right-sidebar">
